# portfolio-projects

./: .gitignore  README.md
Python Projects/Chinese Character Recognition Project/PastOutrageousComma/: main.ipynb  main.py  pyproject.toml
Python Projects/Chinese Character Recognition Project/PastOutrageousComma/CSV Files/: Chinese Character Recognition - Duolingo Level Analysis (Characters).csv  Chinese Character Recognition - Full Characters.csv
Python Projects/Chinese Character Recognition Project/PastOutrageousComma/Database Programs/: Create Character History.py  Create Full Character Database.py  Create Learned Character Database.py  Create Learned Vocabulary Database .py
Python Projects/Chinese Character Recognition Project/PastOutrageousComma/_working_files/Backups/: main (copy).py
Python Projects/Chinese Character Recognition Project/PastOutrageousComma/_working_files/Example Analysis/: 0_Example_Analysis_Initial.py  1_Example_Analysis_OCR.py  2_Ex_An_OCR_Punctuation.py  3_Example_Analysis_Not_Learned_Only.py  4_CurrentStateSave.py  5_Not_Learned_Information.py
Python Projects/Chinese Character Recognition Project/PastOutrageousComma/my_databases/: character_history.db  historical_usage.db  learned_character_database.db  learned_vocabulary_database.db
Python Projects/Chinese Character Recognition Project/PastOutrageousComma/my_programs/analyze/: analyze_char.py  analyze_data_insertion.py  analyze_duplicate_query.py  analyze_get_char_details.py  analyze_hsk_char_level.py  analyze_original.py  analyze_punctuation.py  analyze_sorting.py  analyze_vocab.py  (+1 more)
(+92 files in other folders)
