[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
pmagpy-cli = "^4.2.114"
jieba = "^0.42.1"
xds-protos = "^0.0.11"
flask = "^2.3.3"
bs4 = "^0.0.1"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"